# walltext

./: .gitignore  LICENSE  MANIFEST.in  README.md  Walltext-Installer.spec  demo_wallpaper.md  install_dependencies.bat  install_dependencies.ps1  installer.py  pyproject.toml  test.md  walltext.cmd  walltext_listener.bat  walltext_listener.ps1  walltext_manager.bat  walltext_manager.ps1
docs/: cli.md  manager.md  markdown.md
walltext/: __init__.py  cli.py  config.py  core.py  manager.py  markdown.py  runtime.py
